--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @11ty/eleventy --input=src --output=build"
+    "build": "npx @11ty/eleventy --input=src --output=docs"
   },
   "repository": {
     "type": "git",
