Добавление системы сборки скриптов и стилей

--- a/package.json
+++ b/package.json
@@ -4,22 +4,51 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @11ty/eleventy --input=src --output=docs"
+    "build": "npx @11ty/eleventy --input=src --output=docs && webpack --mode production",
+    "dev": "webpack --mode development",
+    "watch": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fenibazil/ITProjectPortfolio.git"
   },
   "keywords": [],
+  "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "autoprefixer": "^10.4.23",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "file-loader": "^6.x",
+    "import-glob-loader": "^1.1.0",
+    "mini-css-extract-plugin": "^2.9.4",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
+    "sass": "^1.97.1",
+    "sass-loader": "^14.2.1",
+    "stylelint": "^16.26.1",
+    "stylelint-webpack-plugin": "^5.0.1",
+    "terser-webpack-plugin": "^5.3.16",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^5.1.4"
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fenibazil/ITProjectPortfolio/issues"
   },
   "homepage": "https://github.com/fenibazil/ITProjectPortfolio#readme",
+  "volta": {
+    "node": "22.21.1"
+  },
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "@11ty/eleventy-navigation": "^1.0.5"
+    "@11ty/eleventy-navigation": "^1.0.5",
+    "@fancyapps/ui": "^6.1.7",
+    "bootstrap": "^5.3.8",
+    "choices.js": "^11.1.0",
+    "module-dispatcher": "^2.0.0",
+    "swiper": "^12.0.3"
   }
 }
