--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "html-build": "npx @11ty/eleventy --input=src --output=docs",
     "build": "npx @11ty/eleventy --input=src --output=docs && webpack --mode production",
     "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch"
